# rust_gtfs

./: .gitignore  Cargo.toml  README.md  gtfs-requests.proto
gtfs-locator/: Cargo.toml
gtfs-locator/.cargo/: config.toml
gtfs-locator/src/: lib.rs  main.rs  rotary_encoder.rs
gtfs-server/: .env  Cargo.toml  diesel.toml
gtfs-server/migrations/2021-07-13-072527_rust_gtfs_static/: down.sql  up.sql
gtfs-server/src/: lib.rs  main.rs
gtfs-server/src/gtfs/gtfs_real_time/: mod.rs
gtfs-server/src/gtfs/gtfs_static/: mod.rs  models.rs  schema.rs
gtfs-server/src/requests/: closest_vehicle.rs  mod.rs
